<resources>
    <string name="app_name">JustJava</string>

    <string name="name">Name</string>

    <string name="toppings_title">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>

    <string name="quantity_title">Quantity</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="num">2</string>

    <string name="order">Order</string>

</resources>
