<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginLeft="16dp"

        android:hint="@string/name"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Toppings title -->
    <TextView
        android:id="@+id/toppings_title"
        style="@style/HeaderTextStyle"
        android:layout_margin="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/toppings_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_view"
        tools:layout_editor_absoluteY="16dp" />

    <!-- Whipped Cream checkbox -->
    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/whipped_cream"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="16sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toppings_title" />

    <!-- Chocolate checkbox -->
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/chocolate"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="16sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whipped_cream_checkbox" />

    <!--Quantity title -->
    <TextView
        android:id="@+id/title_text_view"
        style="@style/HeaderTextStyle"
        android:layout_margin="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/quantity_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chocolate_checkbox" />

    <!-- Increment Button -->
    <Button
        android:id="@+id/incrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:width="48dp"
        android:height="48dp"
        android:onClick="increment"
        android:text="@string/increment"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintLeft_toRightOf="@id/quantity_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <!--Quantity number view -->
    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/num"
        android:textColor="#000000"

        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintLeft_toRightOf="@id/decrementButton"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <!-- Decrement Button -->
    <Button
        android:id="@+id/decrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:width="40dp"
        android:height="40dp"
        android:onClick="decrement"
        android:text="@string/decrement"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/quantity_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />


    <!--Order button -->
    <Button
        android:id="@+id/button"
        style="@style/HeaderTextStyle"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decrementButton"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
